added content to pages

--- a/css/main.css
+++ b/css/main.css
@@ -289,15 +289,14 @@ body {
 
     .navbar {
       display: flex;
-      flex: 0 0 auto;
-      align-content: space-around;
+      /*flex: 1;*/
+      /*align-content: space-around;*/
       font-size: 1.2em;
 
       .navlink_wrapper {
-        flex: 1 0 auto;
+        /*flex: 1 0 auto;*/
+        flex: 1;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         align-items: center;
 
         .navlink {
@@ -310,8 +309,24 @@ body {
   .content {
     position: relative;
     z-index: 1;
-    flex: 1 0 auto;
+    /*flex: 1 0 auto;*/
+    min-width: 60vw;
+    max-width: 90vw;
+    width: 50em;
+    margin: auto;
     padding: 1.3em;
+    .content_paragraph {
+      /*margin: auto;*/
+      margin-top: 0;
+      text-align: justify;
+      text-align-last: center;
+    }
+    .floating_right {
+      float: right;
+    }
+    .floating_left {
+      float: left;
+    }
   }
   .footer {
     flex: 0 0 auto;
@@ -371,12 +386,12 @@ body {
     .title {
       font-stretch: condensed;
     }
-    .navlink_wrapper {
-      border-bottom-width: 2px;
-      border-top-width: 2px;
-      border-color: #222222;
-      z-index: 3;
-    }
+    /*.navlink_wrapper {*/
+    /*  border-bottom-width: 10px;*/
+    /*  border-top-width: 2px;*/
+    /*  border-color: #222222;*/
+    /*  z-index: 3;*/
+    /*}*/
     .footer {
       flex-direction: column !important;
       flex-flow: column !important;
@@ -389,6 +404,15 @@ body {
 }
 a {
   color: black;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  max-height: 70vh;
+  object-fit: contain;
+}
+li {
+  text-align-last: left;
 }
 
 
